src/objects/Reserve_Withdrawal_Item__c.object
<CustomObject>
    <description>LPAM</description>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Date_Approved__c</fullName>
        <label>Date Approved</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Reserve_Withdrawal__c</fullName>
        <label>Reserve Withdrawal</label>
        <referenceTo>Reserve_Withdrawal__c</referenceTo>
        <relationshipLabel>Reserve Withdrawal Items</relationshipLabel>
        <relationshipName>Reserve_Withdrawal_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Type_Of_Reserve__c</fullName>
        <label>Type Of Reserve</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Replacement</fullName>
                </value>
                <value>
                    <fullName>Operating</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Reserve Withdrawal Item</label>
    <nameField>
        <displayFormat>ResWdlItm-{00000}</displayFormat>
        <label>Reserve Withdrawal Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reserve Withdrawal Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>